@startuml Class_Diagram
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor LightYellow
  BorderColor DarkSlateGray
  ArrowColor DarkSlateGray
}

class TaiKhoan {
  - id : int
  - email : string
  - matKhau : string
  - vaiTro : string
  - trangThaiTaiKhoan : boolean
  - refreshToken : string
  - gioiTinh : boolean
  - ngaySinh : date
  - diaChi : string
  - anhDaiDien : string
  - ngayTao : datetime
  - ngayCapNhat : datetime
  --
  + dangNhap()
  + dangXuat()
  + doiMatKhau()
  + capNhatHoSo()
  + lamMoiToken()
}

class ChuyenKhoa {
  - id : int
  - tenChuyenKhoa : string
  - anhChuyenKhoa : string
  - moTaChuyenKhoa : text
  --
  + themChuyenKhoa()
  + suaChuyenKhoa()
  + xoaChuyenKhoa()
}

class BacSi {
  - id : int
  - hocViChucDanh : string
  - tenBacSi : string
  - moTaNgan : string
  - moTaChiTiet : text
  - giaKham : decimal
  - taiKhoanId : int
  - chuyenKhoaId : int
  --
  + capNhatThongTin()
  + xemLichHen()
}

class BenhNhan {
  - id : int
  - hoTen : string
  - soDienThoai : string
  - emailLienHe : string
  - taiKhoanId : int
  --
  + capNhatHoSo()
  + datLich()
  + huyLich()
}

class KhungGio {
  - id : int
  - gioBatDau : time
  - gioKetThuc : time
}

class LichLamViecBacSi {
  - id : int
  - ngayLamViec : date
  - soBenhNhanHienTai : int
  - sanSang : boolean
  - bacSiId : int
  - khungGioId : int
  --
  + taoLichLamViec()
  + capNhatTrangThai()
  + xoaLichLamViec()
}

class DatLich {
  - id : int
  - ngayDat : date
  - gioBatDau : time
  - gioKetThuc : time
  - lyDoKham : string
  - giaKham : decimal
  - trangThai : string
  - bacSiId : int
  - benhNhanId : int
  - hinhThucThanhToanId : int
  --
  + xacNhan()
  + huy()
  + hoanThanh()
}

class HinhThucThanhToan {
  - id : int
  - tenHinhThuc : string
}

class DonThuoc {
  - id : int
  - datLichId : int
  - ngayTao : datetime
  --
  + taoDonThuoc()
}

class CauHoiThuongGap {
  - id : int
  - cauHoi : string
  - traLoi : string
  - dangHoatDong : boolean
  --
  + themCauHoi()
  + suaCauHoi()
  + xoaCauHoi()
}

' ============================
' QUAN HỆ VỚI MULTIPLICITY
' ============================
TaiKhoan "1" -- "0..1" BacSi
TaiKhoan "1" -- "0..1" BenhNhan

ChuyenKhoa "1" -- "*" BacSi

BacSi "1" -- "*" LichLamViecBacSi
KhungGio "1" -- "*" LichLamViecBacSi

BacSi "1" -- "*" DatLich
BenhNhan "1" -- "*" DatLich
HinhThucThanhToan "1" -- "*" DatLich

DatLich "1" -- "0..1" DonThuoc
@enduml
